Fix spacing between logo/menu on mobile

--- a/src/scss/patterns/_nav.scss
+++ b/src/scss/patterns/_nav.scss
@@ -5,10 +5,10 @@
   display: flex;
   flex-wrap: wrap;
   height: auto;
-  justify-content: space-around;
+  justify-content: space-between;
   max-height: 5%;
   max-width: 1600px;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
   position: relative;
   width: 100%;
   img {
